// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon prop renders icon at the beginning 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
    >
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
      <div
        class="MuiInputAdornment-root InputAdornment-root MuiInputAdornment-positionStart"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root Input-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </div>
      <input
        autocomplete="none"
        class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Icon prop renders icon at the end 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
    >
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
      <div
        class="MuiInputAdornment-root InputAdornment-root MuiInputAdornment-positionStart"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root Input-icon"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
        </svg>
      </div>
      <input
        autocomplete="none"
        class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Native html attributes adds native props to the input 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root Input-root OutlinedInput-rootAuto Mui-disabled Mui-disabled"
    >
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
      <input
        autocomplete="autocomplete"
        class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input Input-input Mui-disabled Mui-disabled"
        disabled=""
        form="formId"
        list="listId"
        name="name"
        readonly=""
        required=""
        tabindex="-1"
        type="button"
        value="value"
      />
    </div>
  </div>
</div>
`;
